Updating dependencies to more recent versions, updating script commands to use up to date arguments, and trying to get the packaged squirrel windows installer to run properly.

--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
   "electronVersion": "1.0.0",
   "dependencies": {
     "electron-debug": "^1",
+    "electron-is-dev" : "^0.1.2",
     "devtron": "^1.1",
     "lodash": "^4"
   },
