--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "clean:osx": "rimraf dist/darwin-x64",
     "clean:win": "rimraf dist/win",
     "clean": "npm run clean:linux && npm run clean:win && npm run clean:osx",
-    "pack:osx": "build --platform=darwin",
+    "pack:osx": "build --darwin",
     "pack:win": "npm run pack:win64 && npm run pack:win32",
-    "pack:win32": "build --platform=win32 --arch=ia32",
-    "pack:win64": "build --platform=win32 --arch=x64",
+    "pack:win32": "build --win --ia32",
+    "pack:win64": "build --win --x64",
     "pack:linux": "npm run pack:lin64 && npm run pack:lin32",
-    "pack:lin32": "build --platform=linux --arch=ia32",
-    "pack:lin64": "build --platform=linux --arch=x64",
+    "pack:lin32": "build --linux --ia32",
+    "pack:lin64": "build --linux --x64",
     "pack": "build --platform=all --arch=x64,ia32",
     "prebuild": "node build/target.js",
     "postbuild": "node build/target.js --clean",
     "prebuild:osx": "npm run prebuild",
     "postbuild:osx": "npm run postbuild",
-    "build:osx": "build --platform=darwin -d",
+    "build:osx": "build --darwin --dir",
     "build:win": "npm run build:win64 && npm run build:win32",
-    "build:win32": "build --platform=win32 --arch=ia32 -d",
-    "build:win64": "build --platform=win32 --arch=x64 -d",
+    "build:win32": "build --win --ia32 --dir",
+    "build:win64": "build --win --x64 --dir",
     "build:linux": "npm run build:lin64 && npm run build:lin32 -d",
-    "build:lin32": "build --platform=linux --arch=ia32 -d",
-    "build:lin64": "build --platform=linux --arch=x64 -d",
+    "build:lin32": "build --linux --ia32 --dir",
+    "build:lin64": "build --linux --x64 --dir",
     "build": "build --platform=all --arch=x64,ia32 -d",
     "postinstall": "install-app-deps"
   },
@@ -96,9 +96,9 @@
     "chai": "^3.5",
     "chai-as-promised": "5.3.0",
     "dependency-check": "^2.5",
-    "electron-builder": "^3",
-    "electron-prebuilt": "^1",
-    "electron-is-dev" : "0.1.2",
+    "electron-builder": "^5.34.1",
+    "electron-prebuilt": "^1.3.4",
+    "electron-is-dev" : "^0.1.2",
     "istanbul": "^0.4",
     "mocha": "^2.4",
     "pre-commit": "^1.1",
