--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
     "dependency-check": "^2.5",
     "electron-builder": "^5.34.1",
     "electron-prebuilt": "^1.3.4",
-    "electron-is-dev" : "^0.1.2",
+    "electron-is-dev": "^0.1.2",
     "istanbul": "^0.4",
     "mocha": "^2.4",
     "pre-commit": "^1.1",
@@ -106,5 +106,9 @@
     "shelljs": "^0.7",
     "spectron": "~3.0.0",
     "standard": "^7"
+  },
+  "dependencies": {
+    "backbone": "^1.3.3",
+    "diskdb": "^0.1.15"
   }
 }
