--- a/app/package.json
+++ b/app/package.json
@@ -15,7 +15,12 @@
     "electron-debug": "^1",
     "electron-is-dev" : "^0.1.2",
     "devtron": "^1.1",
-    "lodash": "^4"
+    "lodash": "^4",
+    "backbone": "^1.3.3",
+    "backbone.localstorage": "^1.1.16",
+    "diskdb": "^0.1.15",
+    "jquery": "^3.1.0",
+    "underscore": "^1.8.3"
   },
   "config": {
     "url": "index.html",
