--- a/package.json
+++ b/package.json
@@ -109,7 +109,9 @@
   },
   "dependencies": {
     "backbone": "^1.3.3",
-    "backbone-localstorage": "^0.3.2",
-    "diskdb": "^0.1.15"
+    "backbone.localstorage": "^1.1.16",
+    "diskdb": "^0.1.15",
+    "jquery": "^3.1.0",
+    "underscore": "^1.8.3"
   }
 }
