--- a/app/package.json
+++ b/app/package.json
@@ -20,7 +20,8 @@
     "backbone.localstorage": "^1.1.16",
     "diskdb": "^0.1.15",
     "jquery": "^3.1.0",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "bootstrap": "^3.3.7"
   },
   "config": {
     "url": "index.html",
