--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
     "backbone": "^1.3.3",
     "backbone.localstorage": "^1.1.16",
     "diskdb": "^0.1.15",
+    "lokijs": "^1.4.1",
     "jquery": "^3.1.0",
     "underscore": "^1.8.3",
     "bootstrap": "^3.3.7"
