--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "backbone.localstorage": "^1.1.16",
     "diskdb": "^0.1.15",
     "lokijs": "^1.4.1",
+    "tokenfield": "^0.3.9",
     "jquery": "^3.1.0",
     "underscore": "^1.8.3",
     "bootstrap": "^3.3.7"
